results/models/glm-5-Tools/cot/glm-5-Tools_49_0.txt
[Tool call: execute_python({"code": "\ndef create_spirv_binary():\n    words = []\n    \n    # === HEADER ===\n    words.append)]
[Tool result: Testing basic construction...
0: 0x00020011
1: 0x00000001
2: 0x00030006
3: 0x00000000
4: 0x00000001
5: 0x0004000F
6: 0x00000005
7: 0x00000032
8: 0x6E69616D
9: 0x00050010
10: 0x00000032
11: 0x00000011
12: 0x00000100
13: 0x00000001
14: 0x0003000E
15: 0x00000002
16: 0x000001C2
17: 0x00030015
18: 0x00000008
19: 0x00000021
20: 0x00040015
21: 0x00000008
22: 0x00000022
23: 0x00000000
24: 0x00030015
25: 0x0000000C
26: 0x00000021
27: 0x00040015
28: 0x0000000C
29: 0x00000022
30: 0x00000000
31: 0x00030015
]

[Tool call: execute_python({"code": "\ndef build_complete_spirv():\n    w = []\n    \n    # Helper functions\n    def word(coun)]
[Tool result: STDERR:
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_470b74dc.py", line 234
    OP_IGL = 129... wait these are wrong
                  ^
SyntaxError: invalid syntax

[exit code 1]]

[Tool call: execute_python({"code": "\n# Let me look up correct SPIR-V opcodes systematically\nopcodes = {\n    'OpNop': 0,\n  )]
[Tool result: Key control flow opcodes:
  OpPhi = 257 (0x101)
  OpLabel = 248 (0xF8)
  OpBranch = 249 (0xF9)
  OpBranchConditional = 250 (0xFA)
  OpLoopMerge = 251 (0xFB)
  OpReturn = 253 (0xFD)]

[Tool call: execute_python({"code": "\n# Let me build the SPIR-V binary properly\ndef make_word(word_count, opcode):\n    retur)]
[Tool result: OpExecutionMode LocalSize format:
  Word count = 6 (opcode word + entry_point + mode + 3 operands)
  So it should be: (6 << 16) | 16
  Encoded: 0x00060010]

[Tool call: execute_python({"code": "\n# Let me build the full SPIR-V binary correctly\n\ndef make_word(word_count, opcode):\n )]
[Tool result: Testing OpTypeVoid encoding...
Initial code words: 14]

[Tool call: execute_python({"code": "\n# Let me build the complete SPIR-V binary for the inclusive scan compute shader\n# I'll )]
[Tool result: Generated 204 words
  0: 0x07230203
  1: 0x00010000
  2: 0x00000000
  3: 0x00000064
  4: 0x00000000
  5: 0x00020011
  6: 0x00000001
  7: 0x0003000E
  8: 0x00000000
  9: 0x00000001
 10: 0x0004000F
 11: 0x00000005
 12: 0x0000001B
 13: 0x6E69616D
 14: 0x00060010
 15: 0x0000001B
 16: 0x00000011
 17: 0x00000100
 18: 0x00000001
 19: 0x00000001
 20: 0x00030003
 21: 0x00000002
 22: 0x000001C2
 23: 0x00030005
 24: 0x0000001B
 25: 0x6E69616D
 26: 0x00030047
 27: 0x0000000F
 28: 0x00000021
 29: 0x00000000
]

[Tool call: execute_python({"code": "\n# The build is working but I have issues with word counts\n# Let me check the format for)]
[Tool result: Testing correct instruction formats:
OpTypeVoid: 0x00020013, 0x00000000
OpTypeInt: 0x00040015, 0x00000002, 0x00000020, 0x00000000
OpConstant: 0x00040032, type_id, result_id, value]

[Tool call: execute_python({"code": "\n# Now let me build a complete working SPIR-V binary for inclusive prefix sum\n\ndef buil)]
[Tool result: Generated 182 words
Magic: 0x07230203
Version: 0x00010000
Bound: 80]

[Tool call: execute_python({"code": "\n# Now I need to complete the function body\n# Let me implement a complete inclusive scan)]
[Tool result: STDERR:
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_29542959.py", line 309
    emit(wc(4) | OP_TYPE_POINTER, INPUT_PTR_VEC3, 1, VEC3_TYPE))  # Input storage class = 1
                                                               ^
SyntaxError: unmatched ')'

[exit code 1]]

[Tool call: execute_python({"code": "\n# Let me rebuild this more carefully, step by step\n\ndef build_spirv_inclusive_scan():\)]
[Tool result: Generated 318 words
Hex length: 2544
First 100 chars: 072302030001000000000000000000460000000000020011000000010003000e00000000000000010004000f000000050000]

[Tool call: execute_python({"code": "\n# The basic structure is working, but the scan logic is incomplete\n# Let me implement a)]
[Tool result: STDERR:
Traceback (most recent call last):
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_341d4059.py", line 395, in <module>
    code = build_spirv_scan_complete()
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_341d4059.py", line 339, in build_spirv_scan_complete
    emit(wc(5) | OP_ISUB, ID_UINT, t_idx2, t_lid, t_step, 0)
                 ^^^^^^^
NameError: name 'OP_ISUB' is not defined

[exit code 1]]

[Tool call: execute_python({"code": "\n# Fix the missing opcode\n\ndef build_spirv_scan_complete():\n    code = []\n    \n    d)]
[Tool result: Generated 1033 words
Hex string length: 8264

Full hex string:
072302030001000000000000000000fa00000000000200110000000100020011000000260003000e00000000000000010004000f000000050000001c6e69616d000600100000001c000000110000010000000001000000010003000300000002000001c2000300050000001c6e69616d000300470000001100000021000000000004004700000011000000220000000000030047000000120000002100000001000400470000001200000022000000000003004700000013000000210000000200040047000000130000002200000000000300470000000700000]

[Tool call: execute_python({"code": "\n# The code has some issues. Let me check and fix:\n\n# 1. OpTypeArray needs constant bef)]
[Tool result: Generated 910 words
Hex string length: 7280

Full hex string:
0723020300010000000000000000009600000000000200110000000100020011000000260003000e00000000000000010004000f000000050000001c6e69616d000600100000001c000000110000010000000001000000010003000300000002000001c2000300050000001c6e69616d0003004700000011000000210000000000040047000000110000002200000000000300470000001200000021000000010004004700000012000000220000000000030047000000130000002100000002000400470000001300000022000000000003004700000007000000]

[Tool call: execute_python({"code": "\n# Looking at the generated code, I see the bound is 150 but some IDs go beyond that\n# A)]
[Tool result: STDERR:
Traceback (most recent call last):
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_1b89ba23.py", line 18, in <module>
    code = build_spirv_scan_fixed()
           ^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'build_spirv_scan_fixed' is not defined

[exit code 1]]

[Tool call: execute_python({"code": "\n# Let me rebuild with correct bound and verify\n\ndef build_spirv_scan_final():\n    cod)]
[Tool result: Max ID used: 172
Bound set to: 178

Generated 889 words
Hex string length: 7112

Full hex string:
072302030001000000000000000000b200000000000200110000000100020011000000260003000e00000000000000010004000f000000050000001c6e69616d000600100000001c000000110000010000000001000000010003000300000002000001c2000300050000001c6e69616d0003004700000011000000210000000000040047000000110000002200000000000300470000001200000021000000010004004700000012000000220000000000030047000000130000002100000002000400470000001300]

[Tool call: execute_python({"code": "\n# The SPIR-V looks good. Let me verify a few things:\n# 1. Check for correct opcodes in )]
[Tool result: Generated 893 words (7144 hex chars)
Bound: 178

Full hex string:
072302030001000000000000000000b200000000000200110000000100020011000000260003000e00000000000000010004000f000000050000001e6e69616d000600100000001e000000110000010000000001000000010003000300000002000001c2000300050000001e6e69616d000300470000001100000021000000000004004700000011000000220000000000030047000000120000002100000001000400470000001200000022000000000003004700000013000000210000000200040047000000130000002200000000000300470000000700]

[Tool call: execute_python({"code": "\n# Let me verify the key parts of the generated SPIR-V\n\n# Check the magic number\ncode )]
[Tool result: STDERR:
Traceback (most recent call last):
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_e55a6af4.py", line 5, in <module>
    code = build_spirv_scan_multi_workgroup()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'build_spirv_scan_multi_workgroup' is not defined

[exit code 1]]

[Tool call: execute_python({"code": "\n# I need to regenerate the code and verify it\n\ndef build_final_spirv():\n    code = [])]
[Tool result: Generated 893 words
Bound: 178
Hex length: 7144

072302030001000000000000000000b200000000000200110000000100020011000000260003000e00000000000000010004000f000000050000001d6e69616d000600100000001d000000110000010000000001000000010003000300000002000001c2000300050000001d6e69616d00030047000000110000002100000000000400470000001100000022000000000003004700000012000000210000000100040047000000120000002200000000000300470000001300000021000000020004004700000013000000220000000000030047000000070000000200030047000]